--- a/core/templates/beach/beach_qrscanner_token.html
+++ b/core/templates/beach/beach_qrscanner_token.html
@@ -22,7 +22,7 @@
                         <th class="border border-gray-300 p-2">People</th>
                         <th class="border border-gray-300 p-2">Payment</th>
                         <th class="border border-gray-300 p-2">Status</th>
-                        <th class="border border-gray-300 p-2">Approve</th>
+                        <th class="border border-gray-300 p-2">Checked In</th>
                         <th class="border border-gray-300 p-2">Amount</th>
                     </tr>
                 </thead>
