--- a/core/templates/cashier/cashier_dashboard.html
+++ b/core/templates/cashier/cashier_dashboard.html
@@ -105,7 +105,7 @@
         </div>
 
         <!-- Report Summary Section (details about the transaction summaries) -->
-        <div class="bg-white p-4 shadow rounded mt-6">
+        <div class="bg-white p-4 shadow rounded mt-6 mb-20">
             <h2 class="text-lg font-semibold mb-2">Report Summary</h2>
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
                 <div>
